#### apring ####

SET (ARPING_TARGET_NAME arping)

INCLUDE_DIRECTORIES (
    ${CMAKE_CURRENT_LIST_DIR}
    )

LIST (APPEND ARPING_SRC_LIST arping.c)

ADD_EXECUTABLE (${ARPING_TARGET_NAME} ${ARPING_SRC_LIST})

#TODO 
ADD_CUSTOM_COMMAND( TARGET ${ARPING_TARGET_NAME} POST_BUILD 
    COMMAND cp -arpf ${EXECUTABLE_OUTPUT_PATH}/${ARPING_TARGET_NAME} ${PLATFORM_SDK_PATH}/rootfs/home/${PLATFORM_HOME}/bin
    )
