INCLUDE (${CMAKE_CURRENT_LIST_DIR}/src/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/images/CMakeLists.txt)

LIST (APPEND DEFINITIONS 
    -DDEBUG
    )

LIST (APPEND LIBRARIES
    m
    pthread
    rt
    z
    )

# INCLUDE (${CMAKE_CURRENT_LIST_DIR}/icebox/CMakeLists.txt)

SET (TARGET_CLOUD_NAME cloud-start.elf)

LIST (REMOVE_DUPLICATES CLOUD_CXX_SRCS)
LIST (REMOVE_DUPLICATES CLOUD_C_SRCS)
LIST (REMOVE_DUPLICATES DEFINITIONS)
LIST (REMOVE_DUPLICATES INCLUDES)
LIST (REMOVE_DUPLICATES LIBRARIES)
LIST (REMOVE_DUPLICATES GROUPE_ARCHIVES)

FOREACH (INC ${INCLUDES})
    # MESSAGE("Add include directory: ${INC}")
    INCLUDE_DIRECTORIES (${INC})
ENDFOREACH (INC)

FOREACH (DEF ${DEFINITIONS})
    # MESSAGE("Add definitions: ${DEF}")
    ADD_DEFINITIONS (${DEF})
ENDFOREACH (DEF)

FOREACH (LDS ${LIBS_DIRECTORIES})
    # MESSAGE("Add link diectory: ${LDS}")
    LINK_DIRECTORIES (${LDS})
ENDFOREACH (LDS)

ADD_EXECUTABLE (${TARGET_CLOUD_NAME} ${CLOUD_CXX_SRCS} ${CLOUD_C_SRCS})

FOREACH (LIBS ${LIBRARIES})
    # MESSAGE("Add link library: ${LIBS}")
    TARGET_LINK_LIBRARIES (${TARGET_CLOUD_NAME} ${LIBS})
ENDFOREACH (LIBS)

TARGET_LINK_LIBRARIES (${TARGET_CLOUD_NAME} -Wl,--start-group ${GROUPE_ARCHIVES} -Wl,--end-group)
